--- a/src/Catty/App-Info.plist
+++ b/src/Catty/App-Info.plist
@@ -38,7 +38,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>11</string>
+	<string>12</string>
 	<key>CatrobatApplicationName</key>
 	<string>Pocket Code (Catty iOS)</string>
 	<key>CatrobatBuildName</key>
@@ -103,5 +103,6 @@
 			</dict>
 		</dict>
 	</array>
+        <key>ITSAppUsesNonExemptEncryption</key><false/>
 </dict>
 </plist>
