--- a/src/.swiftlint.yml
+++ b/src/.swiftlint.yml
@@ -2,8 +2,6 @@ disabled_rules: # rule identifiers to exclude from running
  - todo
  - force_cast
  - identifier_name
- - type_name
- - line_length
  - file_length
  - type_body_length
  - function_body_length
@@ -11,6 +9,15 @@ disabled_rules: # rule identifiers to exclude from running
  - function_parameter_count
  - nesting
  - unused_optional_binding
+line_length:
+  ignores_comments: true
+  warning: 200
+  error: 200
+type_name:
+  min_length: 3 # only warning
+  max_length:   # warning and error
+    warning: 50
+    error: 50
 excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Carthage
  - Pods
