--- a/src/.swiftlint.yml
+++ b/src/.swiftlint.yml
@@ -81,7 +81,7 @@ whitelist_rules:
  - no_fallthrough_only
  ##- no_grouping_extension
  - notification_center_detachment
- - number_separator
+ #- number_separator
  - object_literal
  - opening_brace
  - operator_usage_whitespace
