IOS-533 revert array_init rule

--- a/src/.swiftlint.yml
+++ b/src/.swiftlint.yml
@@ -3,7 +3,7 @@ whitelist_rules:
  # swiftlint rules
  
  - anyobject_protocol
- - array_init
+ ##- array_init
  #- attributes
  - block_based_kvo
  - class_delegate_protocol
