IOS-744 Move BuildScripts into separate folder

--- a/src/.swiftlint.auto.yml
+++ b/src/.swiftlint.auto.yml
@@ -2,9 +2,8 @@ whitelist_rules:
  - trailing_whitespace
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
+ - BuildScripts
  - Carthage
  - Pods
  - Catty/Defines/LanguageTranslationDefinesSwift.swift
- - license-validator.swift
- - precompile-tests.swift
  
