--- a/src/.swiftlint.auto.yml
+++ b/src/.swiftlint.auto.yml
@@ -5,6 +5,7 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Carthage
  - Pods
  - Catty/Defines/LanguageTranslationDefinesSwift.swift
+ - Catty UITests/Defines/LanguageTranslationDefinesUI.swift
  - license-validator.swift
  - precompile-tests.swift
  
