--- a/.gitignore
+++ b/.gitignore
@@ -40,20 +40,11 @@ playground.xcworkspace
 # Package.resolved
 .build/
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-#Pods/
-
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-Carthage/Checkouts
 
-Carthage/Build
+src/Carthage
 
 # fastlane
 #
@@ -62,10 +53,12 @@ Carthage/Build
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+src/fastlane/builds
+src/fastlane/report.xml
+src/fastlane/Preview.html
+src/fastlane/screenshots
+src/fastlane/test_output
+src/fastlane/.env
 
 ## Various project specific ignores
 .DS_Store
@@ -75,5 +68,3 @@ Mockup/*
 *.yaml
 src/precompile-tests
 src/ObjectiveGit
-src/Podfile.lock
-src/Carthage
