--- a/src/Catty/Settings.bundle/Acknowledgements.plist
+++ b/src/Catty/Settings.bundle/Acknowledgements.plist
@@ -16,7 +16,19 @@
                 <key>Type</key>
                 <string>PSGroupSpecifier</string>
                 <key>FooterText</key>
+                <string>Catty/Resources/Licenses/AudioKit</string>
+            </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSGroupSpecifier</string>
+                <key>FooterText</key>
                 <string>Catty/Resources/Licenses/BDKNotifyHUD</string>
+            </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSGroupSpecifier</string>
+                <key>FooterText</key>
+                <string>Catty/Resources/Licenses/CryptoSwift</string>
             </dict>
             <dict>
                 <key>Type</key>
@@ -137,6 +149,12 @@
                 <string>PSGroupSpecifier</string>
                 <key>FooterText</key>
                 <string>Catty/Resources/Licenses/YKImageCropperView</string>
+            </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSGroupSpecifier</string>
+                <key>FooterText</key>
+                <string>Catty/Resources/Licenses/chromaprint</string>
             </dict>
             <dict>
                 <key>Type</key>
