CATTY-45 Enable parallel UI Tests

--- a/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (DEBUG).xcscheme
+++ b/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (DEBUG).xcscheme
@@ -55,7 +55,8 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "AAADA0031B9B29D500E0CA9A"
