CATTY-50 Fix Store Mock Unit tests

--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostDownloadedProjects.success.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostDownloadedProjects.success.json
@@ -384,12 +384,12 @@
             }
           ]
         },
-        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostDownloaded.json?offset=0limit=20&max_version=0.991"
+        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostDownloaded.json?offset=0&limit=20&max_version=0.991"
       },
       "recorded_at" : 1535009876.250865,
       "request" : {
         "method" : "GET",
-        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostDownloaded.json?offset=0limit=20&max_version=0.991"
+        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostDownloaded.json?offset=0&limit=20&max_version=0.991"
       }
     }
   ],
