--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostViewedProjects.fail.parse.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostViewedProjects.fail.parse.json
@@ -383,12 +383,12 @@
             }
           ]
         },
-        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostViewed.json?offset=0limit=20&max_version=0.991"
+        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostViewed.json?offset=0&limit=20&max_version=0.991"
       },
       "recorded_at" : 1535013271.7793779,
       "request" : {
         "method" : "GET",
-        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostViewed.json?offset=0limit=20&max_version=0.991"
+        "url" : "https:\/\/share.catrob.at\/pocketcode\/api\/projects\/mostViewed.json?offset=0&limit=20&max_version=0.991"
       }
     }
   ],
