CATTY-45 Retest flaky tests up to 3 times

--- a/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (DEBUG).xcscheme
+++ b/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (DEBUG).xcscheme
@@ -55,8 +55,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "AAADA0031B9B29D500E0CA9A"
