CATTY-55 App Store: Localized Screenshots

--- a/src/Catty/Settings.bundle/Acknowledgements.plist
+++ b/src/Catty/Settings.bundle/Acknowledgements.plist
@@ -118,6 +118,12 @@
                 <key>Type</key>
                 <string>PSGroupSpecifier</string>
                 <key>FooterText</key>
+                <string>Catty/Resources/Licenses/SnapshotHelper</string>
+            </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSGroupSpecifier</string>
+                <key>FooterText</key>
                 <string>Catty/Resources/Licenses/TTTAttributedLabel</string>
             </dict>
             <dict>
