--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ src/Carthage
 src/fastlane/*
 !src/fastlane/Appfile
 !src/fastlane/Fastfile
+!src/fastlane/Snapfile
 !src/fastlane/Pluginfile
 !src/fastlane/README.md
 !src/fastlane/.env.default
