--- a/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (RELEASE).xcscheme
+++ b/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (RELEASE).xcscheme
@@ -29,8 +29,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CA7698A91B0E4A97000D0340"
-               BuildableName = "Catty Tests.xctest"
-               BlueprintName = "Catty Tests"
+               BuildableName = "CattyTests.xctest"
+               BlueprintName = "CattyTests"
                ReferencedContainer = "container:Catty.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -43,8 +43,22 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "AAADA0031B9B29D500E0CA9A"
-               BuildableName = "Catty UITests.xctest"
-               BlueprintName = "Catty UITests"
+               BuildableName = "CattyUITests.xctest"
+               BlueprintName = "CattyUITests"
+               ReferencedContainer = "container:Catty.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5E0B860A227B9771009B6BE7"
+               BuildableName = "CattyUISnapshots.xctest"
+               BlueprintName = "CattyUISnapshots"
                ReferencedContainer = "container:Catty.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
