--- a/src/RunScripts/.swiftlint.yml
+++ b/src/RunScripts/.swiftlint.yml
@@ -154,8 +154,8 @@ type_name:
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Carthage
- - Pods
  - Catty/Defines/LanguageTranslationDefinesSwift.swift
- - Catty UITests/Defines/LanguageTranslationDefinesUI.swift
+ - CattyUITests/Defines/LanguageTranslationDefinesUI.swift
+ - CattyUISnapshots/Helper/SnapshotHelper.swift
  - RunScripts/license-validator.swift
  - RunScripts/precompile-tests.swift
