--- a/src/Catty/Settings.bundle/Acknowledgements.plist
+++ b/src/Catty/Settings.bundle/Acknowledgements.plist
@@ -16,6 +16,12 @@
                 <key>Type</key>
                 <string>PSGroupSpecifier</string>
                 <key>FooterText</key>
+                <string>Catty/Resources/Licenses/AudioKit</string>
+            </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSGroupSpecifier</string>
+                <key>FooterText</key>
                 <string>Catty/Resources/Licenses/BDKNotifyHUD</string>
             </dict>
             <dict>
