--- a/src/Catty/App-Info.plist
+++ b/src/Catty/App-Info.plist
@@ -15,6 +15,8 @@
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>Catrobat Program</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>org.catrobat.pocketcode.catrobat</string>
@@ -36,11 +38,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.6.9</string>
+	<string>0.6.10</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>24</string>
+	<string>29</string>
 	<key>CatrobatApplicationName</key>
 	<string>Pocket Code (Catty iOS)</string>
 	<key>CatrobatBuildName</key>
