CATTY-76 Catroweb 2.3.0 support

--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.downloadData.fail.request.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.downloadData.fail.request.json
@@ -38,7 +38,7 @@
               "DownloadUrl" : "pocketcode\/download\/821.catrobat",
               "ProjectName" : "Whack A Mole",
               "FileSize" : 0.67617511749268,
-              "ProjectId" : 821
+              "ProjectId" : "821"
             }
           ]
         },
