--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostDownloadedProjects.fail.parse.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostDownloadedProjects.fail.parse.json
@@ -37,7 +37,7 @@
               "DownloadUrl" : "pocketcode\/download\/719.catrobat",
               "ProjectName" : "Galaxy War",
               "FileSize" : 3.0423545837402002,
-              "ProjectId" : 719
+              "ProjectId" : "719"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -55,7 +55,7 @@
               "DownloadUrl" : "pocketcode\/download\/817.catrobat",
               "ProjectName" : "Tic-Tac-Toe Master",
               "FileSize" : 0.24096775054931999,
-              "ProjectId" : 817
+              "ProjectId" : "817"
             },
             {
               "Author" : "mj7007",
@@ -73,7 +73,7 @@
               "DownloadUrl" : "pocketcode\/download\/1581.catrobat",
               "ProjectName" : "Flappy_v3.0",
               "FileSize" : 0.10238456726073999,
-              "ProjectId" : 1581
+              "ProjectId" : "1581"
             },
             {
               "Author" : "kestapa",
@@ -91,7 +91,7 @@
               "DownloadUrl" : "pocketcode\/download\/1450.catrobat",
               "ProjectName" : "Minions ",
               "FileSize" : 0.97402763366698997,
-              "ProjectId" : 1450
+              "ProjectId" : "1450"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -109,7 +109,7 @@
               "DownloadUrl" : "pocketcode\/download\/1976.catrobat",
               "ProjectName" : "Skydiving Steve",
               "FileSize" : 1.7407207489014001,
-              "ProjectId" : 1976
+              "ProjectId" : "1976"
             },
             {
               "Author" : "garygreen",
@@ -127,7 +127,7 @@
               "DownloadUrl" : "pocketcode\/download\/1532.catrobat",
               "ProjectName" : "Flap-Pac-Man",
               "FileSize" : 0.45570659637451,
-              "ProjectId" : 1532
+              "ProjectId" : "1532"
             },
             {
               "Author" : "VesnaK",
@@ -145,7 +145,7 @@
               "DownloadUrl" : "pocketcode\/download\/821.catrobat",
               "ProjectName" : "Whack A Mole",
               "FileSize" : 0.67617511749268,
-              "ProjectId" : 821
+              "ProjectId" : "821"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -163,7 +163,7 @@
               "DownloadUrl" : "pocketcode\/download\/1719.catrobat",
               "ProjectName" : "Don't touch the white tiles!",
               "FileSize" : 0.19506740570068001,
-              "ProjectId" : 1719
+              "ProjectId" : "1719"
             },
             {
               "Author" : "NOLB.Austria",
@@ -181,7 +181,7 @@
               "DownloadUrl" : "pocketcode\/download\/4683.catrobat",
               "ProjectName" : "The Hatter - Hit and Run",
               "FileSize" : 0.60350227355956998,
-              "ProjectId" : 4683
+              "ProjectId" : "4683"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -199,7 +199,7 @@
               "DownloadUrl" : "pocketcode\/download\/827.catrobat",
               "ProjectName" : "Airplane with shadow",
               "FileSize" : 1.2287311553955,
-              "ProjectId" : 827
+              "ProjectId" : "827"
             },
             {
               "Author" : "zello29",
@@ -217,7 +217,7 @@
               "DownloadUrl" : "pocketcode\/download\/2750.catrobat",
               "ProjectName" : "Alien Attack",
               "FileSize" : 0.61998271942139005,
-              "ProjectId" : 2750
+              "ProjectId" : "2750"
             },
             {
               "Author" : "NOLB.Austria",
@@ -235,7 +235,7 @@
               "DownloadUrl" : "pocketcode\/download\/4799.catrobat",
               "ProjectName" : "Welcome to Wonderland",
               "FileSize" : 3.1500511169433998,
-              "ProjectId" : 4799
+              "ProjectId" : "4799"
             },
             {
               "Author" : "Bigdk",
@@ -253,7 +253,7 @@
               "DownloadUrl" : "pocketcode\/download\/7009.catrobat",
               "ProjectName" : "Minecraft",
               "FileSize" : 3.456075668335,
-              "ProjectId" : 7009
+              "ProjectId" : "7009"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -271,7 +271,7 @@
               "DownloadUrl" : "pocketcode\/download\/959.catrobat",
               "ProjectName" : "Pong Starter",
               "FileSize" : 1.4979190826416,
-              "ProjectId" : 959
+              "ProjectId" : "959"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -289,7 +289,7 @@
               "DownloadUrl" : "pocketcode\/download\/968.catrobat",
               "ProjectName" : "Piano",
               "FileSize" : 0.66807842254639005,
-              "ProjectId" : 968
+              "ProjectId" : "968"
             },
             {
               "Author" : "NOLB.Austria",
@@ -307,7 +307,7 @@
               "DownloadUrl" : "pocketcode\/download\/4801.catrobat",
               "ProjectName" : "Save Alice!",
               "FileSize" : 0.69141960144043002,
-              "ProjectId" : 4801
+              "ProjectId" : "4801"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -325,7 +325,7 @@
               "DownloadUrl" : "pocketcode\/download\/710.catrobat",
               "ProjectName" : "Rock paper scissors",
               "FileSize" : 0.46911239624022999,
-              "ProjectId" : 710
+              "ProjectId" : "710"
             },
             {
               "Author" : "PeterK",
@@ -343,7 +343,7 @@
               "DownloadUrl" : "pocketcode\/download\/8946.catrobat",
               "ProjectName" : "Rover Steuerung mit Nachrichten",
               "FileSize" : 1.0980892181396,
-              "ProjectId" : 8946
+              "ProjectId" : "8946"
             },
             {
               "Author" : "NOLB.Austria",
@@ -361,7 +361,7 @@
               "DownloadUrl" : "pocketcode\/download\/4682.catrobat",
               "ProjectName" : "A Rabbits Race",
               "FileSize" : 0.36650848388672003,
-              "ProjectId" : 4682
+              "ProjectId" : "4682"
             },
             {
               "Author" : "oskagamemaker",
@@ -379,7 +379,7 @@
               "DownloadUrl" : "pocketcode\/download\/5655.catrobat",
               "ProjectName" : "super mario bros",
               "FileSize" : 0.17355060577393,
-              "ProjectId" : 5655
+              "ProjectId" : "5655"
             }
           ]
         },
