--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostViewedProjects.fail.parse.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostViewedProjects.fail.parse.json
@@ -37,7 +37,7 @@
               "DownloadUrl" : "pocketcode\/download\/719.catrobat",
               "ProjectName" : "Galaxy War",
               "FileSize" : 3.0423545837402002,
-              "ProjectId" : 719
+              "ProjectId" : "719"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -55,7 +55,7 @@
               "DownloadUrl" : "pocketcode\/download\/817.catrobat",
               "ProjectName" : "Tic-Tac-Toe Master",
               "FileSize" : 0.24096775054931999,
-              "ProjectId" : 817
+              "ProjectId" : "817"
             },
             {
               "Author" : "mj7007",
@@ -73,7 +73,7 @@
               "DownloadUrl" : "pocketcode\/download\/1581.catrobat",
               "ProjectName" : "Flappy_v3.0",
               "FileSize" : 0.10238456726073999,
-              "ProjectId" : 1581
+              "ProjectId" : "1581"
             },
             {
               "Author" : "kestapa",
@@ -91,7 +91,7 @@
               "DownloadUrl" : "pocketcode\/download\/1450.catrobat",
               "ProjectName" : "Minions ",
               "FileSize" : 0.97402763366698997,
-              "ProjectId" : 1450
+              "ProjectId" : "1450"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -109,7 +109,7 @@
               "DownloadUrl" : "pocketcode\/download\/1976.catrobat",
               "ProjectName" : "Skydiving Steve",
               "FileSize" : 1.7407207489014001,
-              "ProjectId" : 1976
+              "ProjectId" : "1976"
             },
             {
               "Author" : "garygreen",
@@ -127,7 +127,7 @@
               "DownloadUrl" : "pocketcode\/download\/1532.catrobat",
               "ProjectName" : "Flap-Pac-Man",
               "FileSize" : 0.45570659637451,
-              "ProjectId" : 1532
+              "ProjectId" : "1532"
             },
             {
               "Author" : "VesnaK",
@@ -145,7 +145,7 @@
               "DownloadUrl" : "pocketcode\/download\/821.catrobat",
               "ProjectName" : "Whack A Mole",
               "FileSize" : 0.67617511749268,
-              "ProjectId" : 821
+              "ProjectId" : "821"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -163,7 +163,7 @@
               "DownloadUrl" : "pocketcode\/download\/827.catrobat",
               "ProjectName" : "Airplane with shadow",
               "FileSize" : 1.2287311553955,
-              "ProjectId" : 827
+              "ProjectId" : "827"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -181,7 +181,7 @@
               "DownloadUrl" : "pocketcode\/download\/959.catrobat",
               "ProjectName" : "Pong Starter",
               "FileSize" : 1.4979190826416,
-              "ProjectId" : 959
+              "ProjectId" : "959"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -199,7 +199,7 @@
               "DownloadUrl" : "pocketcode\/download\/1719.catrobat",
               "ProjectName" : "Don't touch the white tiles!",
               "FileSize" : 0.19506740570068001,
-              "ProjectId" : 1719
+              "ProjectId" : "1719"
             },
             {
               "Author" : "Bigdk",
@@ -217,7 +217,7 @@
               "DownloadUrl" : "pocketcode\/download\/7009.catrobat",
               "ProjectName" : "Minecraft",
               "FileSize" : 3.456075668335,
-              "ProjectId" : 7009
+              "ProjectId" : "7009"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -235,7 +235,7 @@
               "DownloadUrl" : "pocketcode\/download\/968.catrobat",
               "ProjectName" : "Piano",
               "FileSize" : 0.66807842254639005,
-              "ProjectId" : 968
+              "ProjectId" : "968"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -253,7 +253,7 @@
               "DownloadUrl" : "pocketcode\/download\/710.catrobat",
               "ProjectName" : "Rock paper scissors",
               "FileSize" : 0.46911239624022999,
-              "ProjectId" : 710
+              "ProjectId" : "710"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -271,7 +271,7 @@
               "DownloadUrl" : "pocketcode\/download\/828.catrobat",
               "ProjectName" : "Word balloon demo",
               "FileSize" : 1.2077264785766999,
-              "ProjectId" : 828
+              "ProjectId" : "828"
             },
             {
               "Author" : "juliety",
@@ -289,7 +289,7 @@
               "DownloadUrl" : "pocketcode\/download\/983.catrobat",
               "ProjectName" : "Gossip Girl",
               "FileSize" : 3.5586376190186,
-              "ProjectId" : 983
+              "ProjectId" : "983"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -307,7 +307,7 @@
               "DownloadUrl" : "pocketcode\/download\/969.catrobat",
               "ProjectName" : "Memory",
               "FileSize" : 0.36265754699706998,
-              "ProjectId" : 969
+              "ProjectId" : "969"
             },
             {
               "Author" : "PocketCodeTeam",
@@ -325,7 +325,7 @@
               "DownloadUrl" : "pocketcode\/download\/974.catrobat",
               "ProjectName" : "Castle",
               "FileSize" : 3.3021221160889001,
-              "ProjectId" : 974
+              "ProjectId" : "974"
             },
             {
               "Author" : "hej-wickie-hej",
@@ -343,7 +343,7 @@
               "DownloadUrl" : "pocketcode\/download\/825.catrobat",
               "ProjectName" : "Compass 0.1",
               "FileSize" : 0.03013801574707,
-              "ProjectId" : 825
+              "ProjectId" : "825"
             },
             {
               "Author" : "pinki",
@@ -361,7 +361,7 @@
               "DownloadUrl" : "pocketcode\/download\/923.catrobat",
               "ProjectName" : "Demonstration",
               "FileSize" : 0.48173904418945002,
-              "ProjectId" : 923
+              "ProjectId" : "923"
             },
             {
               "Author" : "Yan",
@@ -379,7 +379,7 @@
               "DownloadUrl" : "pocketcode\/download\/1447.catrobat",
               "ProjectName" : "X-Ray phone",
               "FileSize" : 0.38725280761719,
-              "ProjectId" : 1447
+              "ProjectId" : "1447"
             }
           ]
         },
