--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.downloadData.success.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.downloadData.success.json
@@ -38,7 +38,7 @@
               "DownloadUrl" : "pocketcode\/download\/821.catrobat",
               "ProjectName" : "Whack A Mole",
               "FileSize" : 0.67617511749268,
-              "ProjectId" : 821
+              "ProjectId" : "821"
             }
           ]
         },
