--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostRecentProjects.fail.parse.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.fetchMostRecentProjects.fail.parse.json
@@ -37,7 +37,7 @@
               "DownloadUrl" : "pocketcode\/download\/63054.catrobat",
               "ProjectName" : "fnia",
               "FileSize" : 0.71370792388916005,
-              "ProjectId" : 63054
+              "ProjectId" : "63054"
             },
             {
               "Author" : "hectorplayer",
@@ -55,7 +55,7 @@
               "DownloadUrl" : "pocketcode\/download\/59318.catrobat",
               "ProjectName" : "vahhw",
               "FileSize" : 2.2284049987793,
-              "ProjectId" : 59318
+              "ProjectId" : "59318"
             },
             {
               "Author" : "Zerex",
@@ -73,7 +73,7 @@
               "DownloadUrl" : "pocketcode\/download\/58583.catrobat",
               "ProjectName" : "фонарик south park the stik of true картман",
               "FileSize" : 1.4076614379882999,
-              "ProjectId" : 58583
+              "ProjectId" : "58583"
             },
             {
               "Author" : "cattytest@catrob.at",
@@ -91,7 +91,7 @@
               "DownloadUrl" : "pocketcode\/download\/57015.catrobat",
               "ProjectName" : "My first program",
               "FileSize" : 0.63293170928955,
-              "ProjectId" : 57015
+              "ProjectId" : "57015"
             },
             {
               "Author" : "roadshow",
@@ -109,7 +109,7 @@
               "DownloadUrl" : "pocketcode\/download\/56709.catrobat",
               "ProjectName" : "Oben halten _ 19072005",
               "FileSize" : 0.24412631988524999,
-              "ProjectId" : 56709
+              "ProjectId" : "56709"
             },
             {
               "Author" : "kaja",
@@ -127,7 +127,7 @@
               "DownloadUrl" : "pocketcode\/download\/55219.catrobat",
               "ProjectName" : "Programm1",
               "FileSize" : 0.20150661468506001,
-              "ProjectId" : 55219
+              "ProjectId" : "55219"
             },
             {
               "Author" : "Samokhov",
@@ -145,7 +145,7 @@
               "DownloadUrl" : "pocketcode\/download\/54823.catrobat",
               "ProjectName" : "xdx",
               "FileSize" : 0.0087070465087891007,
-              "ProjectId" : 54823
+              "ProjectId" : "54823"
             },
             {
               "Author" : "kayanl",
@@ -163,7 +163,7 @@
               "DownloadUrl" : "pocketcode\/download\/54384.catrobat",
               "ProjectName" : "fnak",
               "FileSize" : 0.016203880310059,
-              "ProjectId" : 54384
+              "ProjectId" : "54384"
             },
             {
               "Author" : "HiTso",
@@ -181,7 +181,7 @@
               "DownloadUrl" : "pocketcode\/download\/48669.catrobat",
               "ProjectName" : "SPAGHETTI BUTTON",
               "FileSize" : 1.5925207138062001,
-              "ProjectId" : 48669
+              "ProjectId" : "48669"
             },
             {
               "Author" : "GAMERXMFS",
@@ -199,7 +199,7 @@
               "DownloadUrl" : "pocketcode\/download\/48522.catrobat",
               "ProjectName" : "игра ч",
               "FileSize" : 0.0025558471679687999,
-              "ProjectId" : 48522
+              "ProjectId" : "48522"
             },
             {
               "Author" : "rbot",
@@ -217,7 +217,7 @@
               "DownloadUrl" : "pocketcode\/download\/47044.catrobat",
               "ProjectName" : "фонарик",
               "FileSize" : 0.022455215454102,
-              "ProjectId" : 47044
+              "ProjectId" : "47044"
             },
             {
               "Author" : "gamer19",
@@ -235,7 +235,7 @@
               "DownloadUrl" : "pocketcode\/download\/46418.catrobat",
               "ProjectName" : "mole killer",
               "FileSize" : 8.3553485870361008,
-              "ProjectId" : 46418
+              "ProjectId" : "46418"
             },
             {
               "Author" : "jdjdjfiidicikdkckdkf",
@@ -253,7 +253,7 @@
               "DownloadUrl" : "pocketcode\/download\/46265.catrobat",
               "ProjectName" : "Game Dev Simulator",
               "FileSize" : 0.37708759307861001,
-              "ProjectId" : 46265
+              "ProjectId" : "46265"
             },
             {
               "Author" : "hsjsjdkdkskdkdk",
@@ -271,7 +271,7 @@
               "DownloadUrl" : "pocketcode\/download\/46201.catrobat",
               "ProjectName" : "Ершик Кликер",
               "FileSize" : 1.2053937911987,
-              "ProjectId" : 46201
+              "ProjectId" : "46201"
             },
             {
               "Author" : "shsjdbdkxkdjcdckfci",
@@ -289,7 +289,7 @@
               "DownloadUrl" : "pocketcode\/download\/44492.catrobat",
               "ProjectName" : "One Night At Fantom Foxy Mobile Edition",
               "FileSize" : 1.7992515563964999,
-              "ProjectId" : 44492
+              "ProjectId" : "44492"
             },
             {
               "Author" : "sjsjajskskkfofpepeofkc",
@@ -307,7 +307,7 @@
               "DownloadUrl" : "pocketcode\/download\/44056.catrobat",
               "ProjectName" : "Ершик Adventure",
               "FileSize" : 2.4917182922363001,
-              "ProjectId" : 44056
+              "ProjectId" : "44056"
             },
             {
               "Author" : "petysjdjdhdsjdjsjsi",
@@ -325,7 +325,7 @@
               "DownloadUrl" : "pocketcode\/download\/44055.catrobat",
               "ProjectName" : "Ершик Adventure",
               "FileSize" : 2.4285221099854,
-              "ProjectId" : 44055
+              "ProjectId" : "44055"
             },
             {
               "Author" : "kevz",
@@ -343,7 +343,7 @@
               "DownloadUrl" : "pocketcode\/download\/43444.catrobat",
               "ProjectName" : "Can't Help",
               "FileSize" : 2.5661573410034002,
-              "ProjectId" : 43444
+              "ProjectId" : "43444"
             },
             {
               "Author" : "adarshvk2006@gmail.com",
@@ -361,7 +361,7 @@
               "DownloadUrl" : "pocketcode\/download\/38707.catrobat",
               "ProjectName" : "Jumber",
               "FileSize" : 0.16540718078613001,
-              "ProjectId" : 38707
+              "ProjectId" : "38707"
             },
             {
               "Author" : "maximiymaximiy",
@@ -379,7 +379,7 @@
               "DownloadUrl" : "pocketcode\/download\/38153.catrobat",
               "ProjectName" : "машина",
               "FileSize" : 0.35328102111816001,
-              "ProjectId" : 38153
+              "ProjectId" : "38153"
             }
           ]
         },
