--- a/src/CattyTests/Download/Fixtures/StoreProjectDownloader.searchProjects.success.json
+++ b/src/CattyTests/Download/Fixtures/StoreProjectDownloader.searchProjects.success.json
@@ -38,7 +38,7 @@
               "DownloadUrl" : "pocketcode\/download\/16746.catrobat",
               "ProjectName" : "galaxy war 2 the revolution",
               "FileSize" : 3.1470642089843999,
-              "ProjectId" : 16746
+              "ProjectId" : "16746"
             },
             {
               "Author" : "realitystruck",
@@ -56,7 +56,7 @@
               "DownloadUrl" : "pocketcode\/download\/16161.catrobat",
               "ProjectName" : "Galaxy flight",
               "FileSize" : 1.9673347473145,
-              "ProjectId" : 16161
+              "ProjectId" : "16161"
             },
             {
               "Author" : "harry1313",
@@ -74,7 +74,7 @@
               "DownloadUrl" : "pocketcode\/download\/16141.catrobat",
               "ProjectName" : "Galaxy Billiard (Multiplayer)",
               "FileSize" : 4.3165731430054004,
-              "ProjectId" : 16141
+              "ProjectId" : "16141"
             },
             {
               "Author" : "Zaj4e",
@@ -92,7 +92,7 @@
               "DownloadUrl" : "pocketcode\/download\/16133.catrobat",
               "ProjectName" : "Galaxy Protector!",
               "FileSize" : 2.3541765213013002,
-              "ProjectId" : 16133
+              "ProjectId" : "16133"
             },
             {
               "Author" : "1512410",
@@ -110,7 +110,7 @@
               "DownloadUrl" : "pocketcode\/download\/16082.catrobat",
               "ProjectName" : "#GalaxyGameJam Quiz",
               "FileSize" : 1.2373018264771001,
-              "ProjectId" : 16082
+              "ProjectId" : "16082"
             },
             {
               "Author" : "eldinAB",
@@ -128,7 +128,7 @@
               "DownloadUrl" : "pocketcode\/download\/16003.catrobat",
               "ProjectName" : "Galaxy UFO Shooter",
               "FileSize" : 0.37668418884277,
-              "ProjectId" : 16003
+              "ProjectId" : "16003"
             },
             {
               "Author" : "endi92",
@@ -146,7 +146,7 @@
               "DownloadUrl" : "pocketcode\/download\/15924.catrobat",
               "ProjectName" : "Galaxy Run",
               "FileSize" : 18.658479690551999,
-              "ProjectId" : 15924
+              "ProjectId" : "15924"
             },
             {
               "Author" : "tomica066",
@@ -164,7 +164,7 @@
               "DownloadUrl" : "pocketcode\/download\/15859.catrobat",
               "ProjectName" : "Endless Galaxy",
               "FileSize" : 7.6586780548095996,
-              "ProjectId" : 15859
+              "ProjectId" : "15859"
             },
             {
               "Author" : "marti_tina",
@@ -182,7 +182,7 @@
               "DownloadUrl" : "pocketcode\/download\/15059.catrobat",
               "ProjectName" : "galaxy game jam",
               "FileSize" : 0.23472499847412001,
-              "ProjectId" : 15059
+              "ProjectId" : "15059"
             },
             {
               "Author" : "silverLining",
@@ -200,7 +200,7 @@
               "DownloadUrl" : "pocketcode\/download\/9604.catrobat",
               "ProjectName" : "GalaxyRun",
               "FileSize" : 0.91464805603027,
-              "ProjectId" : 9604
+              "ProjectId" : "9604"
             },
             {
               "Author" : "GameGalaxy",
@@ -218,7 +218,7 @@
               "DownloadUrl" : "pocketcode\/download\/16976.catrobat",
               "ProjectName" : "GameGalaxy_YT SONG!",
               "FileSize" : 3.5451841354370002,
-              "ProjectId" : 16976
+              "ProjectId" : "16976"
             },
             {
               "Author" : "Galaxy Space War",
@@ -236,7 +236,7 @@
               "DownloadUrl" : "pocketcode\/download\/8295.catrobat",
               "ProjectName" : "Galaxy Space War",
               "FileSize" : 2.8415975570679,
-              "ProjectId" : 8295
+              "ProjectId" : "8295"
             },
             {
               "Author" : "dtomi",
@@ -254,7 +254,7 @@
               "DownloadUrl" : "pocketcode\/download\/27610.catrobat",
               "ProjectName" : "Galaxy War remix",
               "FileSize" : 4.5781412124634002,
-              "ProjectId" : 27610
+              "ProjectId" : "27610"
             },
             {
               "Author" : "Dmitrij0001",
@@ -272,7 +272,7 @@
               "DownloadUrl" : "pocketcode\/download\/16916.catrobat",
               "ProjectName" : "Galaxy Os (1.0) ",
               "FileSize" : 1.8600149154662999,
-              "ProjectId" : 16916
+              "ProjectId" : "16916"
             },
             {
               "Author" : "HalloSan",
@@ -290,7 +290,7 @@
               "DownloadUrl" : "pocketcode\/download\/16373.catrobat",
               "ProjectName" : "Galaxy",
               "FileSize" : 0.36576175689696999,
-              "ProjectId" : 16373
+              "ProjectId" : "16373"
             },
             {
               "Author" : "MisterMonkeyDonkey",
@@ -308,7 +308,7 @@
               "DownloadUrl" : "pocketcode\/download\/16243.catrobat",
               "ProjectName" : "Guardians_of_Galaxy",
               "FileSize" : 1.5016031265259,
-              "ProjectId" : 16243
+              "ProjectId" : "16243"
             },
             {
               "Author" : "jhNs",
@@ -326,7 +326,7 @@
               "DownloadUrl" : "pocketcode\/download\/16229.catrobat",
               "ProjectName" : "Galaxy Defender TUG",
               "FileSize" : 0.24125194549560999,
-              "ProjectId" : 16229
+              "ProjectId" : "16229"
             },
             {
               "Author" : "johnny28",
@@ -344,7 +344,7 @@
               "DownloadUrl" : "pocketcode\/download\/16222.catrobat",
               "ProjectName" : "Galaxy game kern, platzer",
               "FileSize" : 1.7957553863525,
-              "ProjectId" : 16222
+              "ProjectId" : "16222"
             },
             {
               "Author" : "aestas",
@@ -362,7 +362,7 @@
               "DownloadUrl" : "pocketcode\/download\/16205.catrobat",
               "ProjectName" : "Galaxy Quest",
               "FileSize" : 1.7087564468384,
-              "ProjectId" : 16205
+              "ProjectId" : "16205"
             },
             {
               "Author" : "likaan",
@@ -380,7 +380,7 @@
               "DownloadUrl" : "pocketcode\/download\/16190.catrobat",
               "ProjectName" : "galaxy jam",
               "FileSize" : 3.1926107406616002,
-              "ProjectId" : 16190
+              "ProjectId" : "16190"
             },
             {
               "Author" : "MarioMauberger",
@@ -398,7 +398,7 @@
               "DownloadUrl" : "pocketcode\/download\/16047.catrobat",
               "ProjectName" : "GalaxyGameJam_MM",
               "FileSize" : 6.9101667404175,
-              "ProjectId" : 16047
+              "ProjectId" : "16047"
             },
             {
               "Author" : "fhab97",
@@ -416,7 +416,7 @@
               "DownloadUrl" : "pocketcode\/download\/16188.catrobat",
               "ProjectName" : "GalaxyAdventure",
               "FileSize" : 1.8657817840576001,
-              "ProjectId" : 16188
+              "ProjectId" : "16188"
             },
             {
               "Author" : "vuchameister",
@@ -434,7 +434,7 @@
               "DownloadUrl" : "pocketcode\/download\/16185.catrobat",
               "ProjectName" : "Galaxy Smash",
               "FileSize" : 0.6066312789917,
-              "ProjectId" : 16185
+              "ProjectId" : "16185"
             },
             {
               "Author" : "extremzocker",
@@ -452,7 +452,7 @@
               "DownloadUrl" : "pocketcode\/download\/16158.catrobat",
               "ProjectName" : "Galaxy Rider",
               "FileSize" : 0.37167167663574002,
-              "ProjectId" : 16158
+              "ProjectId" : "16158"
             },
             {
               "Author" : "kathi1311",
@@ -470,7 +470,7 @@
               "DownloadUrl" : "pocketcode\/download\/16153.catrobat",
               "ProjectName" : "Galaxy Drop Down",
               "FileSize" : 3.5372276306152002,
-              "ProjectId" : 16153
+              "ProjectId" : "16153"
             },
             {
               "Author" : "laexeus",
@@ -488,7 +488,7 @@
               "DownloadUrl" : "pocketcode\/download\/16152.catrobat",
               "ProjectName" : "GalaxyQuest",
               "FileSize" : 3.8977279663086,
-              "ProjectId" : 16152
+              "ProjectId" : "16152"
             },
             {
               "Author" : "NeverCode",
@@ -506,7 +506,7 @@
               "DownloadUrl" : "pocketcode\/download\/16119.catrobat",
               "ProjectName" : "Galaxy",
               "FileSize" : 3.5412139892578001,
-              "ProjectId" : 16119
+              "ProjectId" : "16119"
             },
             {
               "Author" : "fradzo",
@@ -524,7 +524,7 @@
               "DownloadUrl" : "pocketcode\/download\/16103.catrobat",
               "ProjectName" : "Galaxy Trouble",
               "FileSize" : 2.3725156784057999,
-              "ProjectId" : 16103
+              "ProjectId" : "16103"
             },
             {
               "Author" : "luki1764",
@@ -542,7 +542,7 @@
               "DownloadUrl" : "pocketcode\/download\/16098.catrobat",
               "ProjectName" : "Galaxy Invaders",
               "FileSize" : 2.2327156066895002,
-              "ProjectId" : 16098
+              "ProjectId" : "16098"
             },
             {
               "Author" : "MarioMauberger",
@@ -560,7 +560,7 @@
               "DownloadUrl" : "pocketcode\/download\/16043.catrobat",
               "ProjectName" : "GalaxyGameJam",
               "FileSize" : 6.9085130691528001,
-              "ProjectId" : 16043
+              "ProjectId" : "16043"
             },
             {
               "Author" : "hamdab11",
@@ -578,7 +578,7 @@
               "DownloadUrl" : "pocketcode\/download\/15998.catrobat",
               "ProjectName" : "Galaxy",
               "FileSize" : 2.2942028045653999,
-              "ProjectId" : 15998
+              "ProjectId" : "15998"
             },
             {
               "Author" : "alexanderperko",
@@ -596,7 +596,7 @@
               "DownloadUrl" : "pocketcode\/download\/15995.catrobat",
               "ProjectName" : "Galaxy Quest",
               "FileSize" : 0.89745330810546997,
-              "ProjectId" : 15995
+              "ProjectId" : "15995"
             },
             {
               "Author" : "JustMe",
@@ -614,7 +614,7 @@
               "DownloadUrl" : "pocketcode\/download\/15911.catrobat",
               "ProjectName" : "Galaxy-Collector",
               "FileSize" : 2.2136135101318,
-              "ProjectId" : 15911
+              "ProjectId" : "15911"
             },
             {
               "Author" : "a_link_to_the_past",
@@ -632,7 +632,7 @@
               "DownloadUrl" : "pocketcode\/download\/15681.catrobat",
               "ProjectName" : "Galaxy Brick-Breaker",
               "FileSize" : 4.4127511978148997,
-              "ProjectId" : 15681
+              "ProjectId" : "15681"
             },
             {
               "Author" : "saroth",
@@ -650,7 +650,7 @@
               "DownloadUrl" : "pocketcode\/download\/15633.catrobat",
               "ProjectName" : "GalaxyTrial",
               "FileSize" : 8.0356435775756996,
-              "ProjectId" : 15633
+              "ProjectId" : "15633"
             },
             {
               "Author" : "roadshow",
@@ -668,7 +668,7 @@
               "DownloadUrl" : "pocketcode\/download\/14481.catrobat",
               "ProjectName" : "galaxy pong",
               "FileSize" : 0.25366878509521001,
-              "ProjectId" : 14481
+              "ProjectId" : "14481"
             },
             {
               "Author" : "david_industries",
@@ -686,7 +686,7 @@
               "DownloadUrl" : "pocketcode\/download\/14324.catrobat",
               "ProjectName" : "Galaxy",
               "FileSize" : 0.20345878601073999,
-              "ProjectId" : 14324
+              "ProjectId" : "14324"
             }
           ]
         },
