--- a/src/Catty/Settings.bundle/Root.plist
+++ b/src/Catty/Settings.bundle/Root.plist
@@ -8,7 +8,7 @@
 			<key>Key</key>
 			<string></string>
 			<key>Title</key>
-			<string>Introduction</string>
+			<string>Privacy Policy</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
@@ -16,9 +16,9 @@
 			<key>DefaultValue</key>
 			<false/>
 			<key>Key</key>
-			<string>showIntroductionOnEveryLaunch</string>
+			<string>showPrivacyPolicyOnEveryLaunch</string>
 			<key>Title</key>
-			<string>Show introduction on launch</string>
+			<string>Show privacy policy on launch</string>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
